- Players are now always bright, for ease of visibility at longer ranges.
- Drones are now faster, fire faster, and their shots speed up. There are also more drone spawns on certain maps.
 ^- Push08
 ^- Push19
 ^- Push10
 ^- Push11
 ^- Push15
 ^- Push18
 ^- Push21
 ^- Push22
 ^- Push24
 ^- Push31
- Changing/swapping maps while in non-DM modes no longer renders the players invulnerable.

MAPS:
- Push11 now has both drone spawns and projectile blocking boundaries.
- Push19's been given the Presidential Treatment:
 ^ More efficient method of keeping players off the counter (an invisible 3D floor) end
 ^ Fixed the alignment of some pyramid light textures
 ^ Blue ring platforms are now fully lit and 125% wider
 ^ Raised ceilings above some 3D floors slightly, so they appear on the automap
 ^ Filled the large window in with glass.  The center pane remains open
- Push20's boundaries have been shortened by 2056 units.
- Push27 now has a drone spawn.
- Absolutely nothing was changed about Push28.
- Push30 no longer can teleport lasers into infinity.
- Push32 now has darker borders around the circles to indicate position.
- Push33's center mountains have been removed, and the mountains have been moved to the outer portion of the map. To address camping, there is now an ocean drift on the outside of the map--get thrown out there, and you'll start drifting away!
- Push34's platforms have been trimmed and the belts sped up.
- Push34 has many more spawnpoints now.
- Push35 no longer has player spawns outside of the play boundary.
- Push38's layout has been squeezed in a slight bit, for easier mobility.
- Push43's killfloor has had its depth increased, so it's no longer as easy to trip into it.
- Push46's skybox is no longer obscenely fuckhuge filesize.
- Push47's camp spots have been removed.
- Push47's miscolored water has been colored properly.
- Push49's boundaries have been shortened and the main layout has been expanded.
- Push49 no longer has the water bobbing up and down.