@@ -1,0 +1,5 @@
+server int p_suddendeath   = 1;
+server int p_jumpcount     = 2;
+server int p_timelimit     = 4;
+server int p_punchdrunk    = 0;
+server int p_triggerhappy  = 0;
